--- a/g5Mindr/g5Mindr/XIBs/g5BounceNavigationController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5BounceNavigationController.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5ReminderListViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5BounceNavigationController">
             <connections>
                 <outlet property="backButtonBottomConstraint" destination="tbO-W0-nhe" id="2UR-f6-oQu"/>
                 <outlet property="backButtonLeadingConstraint" destination="6SS-cA-nTa" id="voz-5z-dgq"/>
@@ -18,6 +17,7 @@
                 <outlet property="nextButtonBackground" destination="fNq-rv-9gl" id="S6I-Rb-C1K"/>
                 <outlet property="nextButtonBottomConstraint" destination="pI9-cO-jUd" id="CgS-39-dbH"/>
                 <outlet property="nextButtonContainerView" destination="uEN-4M-Brb" id="DlX-3c-QNd"/>
+                <outlet property="nextButtonOverlayImageView" destination="K2Z-Ap-Akz" id="T23-MB-a4T"/>
                 <outlet property="nextButtonTrailingConstraint" destination="8Uc-vA-oTY" id="UkY-4g-GRV"/>
                 <outlet property="previousButtonBackground" destination="5Zh-0Y-BIo" id="2yU-Os-5D6"/>
                 <outlet property="previousButtonBottomConstraint" destination="IMY-AV-95v" id="Uig-9f-Rcu"/>
@@ -35,7 +35,7 @@
                     <color key="backgroundColor" red="0.18823529410000001" green="0.37647058820000001" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sog-WI-tIC" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Zh-0Y-BIo" userLabel="Previous Button Container">
@@ -88,22 +88,38 @@
                                 <action selector="didPressNextButton:" destination="-1" eventType="touchUpInside" id="mdP-6j-37O"/>
                             </connections>
                         </button>
+                        <imageView hidden="YES" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K2Z-Ap-Akz">
+                            <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="fNq-rv-9gl" secondAttribute="trailing" id="54a-QO-4ld"/>
                         <constraint firstItem="fNq-rv-9gl" firstAttribute="leading" secondItem="uEN-4M-Brb" secondAttribute="leading" id="6fh-O2-p8d"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="width" secondItem="rLp-2l-R6L" secondAttribute="width" id="6mC-sZ-9JA"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="centerX" secondItem="rLp-2l-R6L" secondAttribute="centerX" id="84B-ub-cau"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="width" secondItem="fNq-rv-9gl" secondAttribute="width" id="A36-kE-6y2"/>
                         <constraint firstItem="rLp-2l-R6L" firstAttribute="centerY" secondItem="uEN-4M-Brb" secondAttribute="centerY" constant="-22" id="IGw-bY-jb6"/>
                         <constraint firstAttribute="bottom" secondItem="fNq-rv-9gl" secondAttribute="bottom" id="IQr-4W-GBi"/>
                         <constraint firstItem="fNq-rv-9gl" firstAttribute="top" secondItem="uEN-4M-Brb" secondAttribute="top" id="Q1H-cB-1mQ"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="height" secondItem="fNq-rv-9gl" secondAttribute="height" id="Xmv-Xv-jLx"/>
                         <constraint firstAttribute="width" constant="130" id="a4X-Pi-ogp"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="centerX" secondItem="fNq-rv-9gl" secondAttribute="centerX" id="bNn-wT-5s1"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="centerY" secondItem="fNq-rv-9gl" secondAttribute="centerY" id="hzA-kT-OcK"/>
                         <constraint firstItem="rLp-2l-R6L" firstAttribute="trailing" secondItem="fNq-rv-9gl" secondAttribute="trailing" id="jBf-Wa-7LN"/>
                         <constraint firstAttribute="height" constant="130" id="jiG-MQ-Jxa"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="centerY" secondItem="rLp-2l-R6L" secondAttribute="centerY" id="lNN-Km-zwc"/>
                         <constraint firstItem="rLp-2l-R6L" firstAttribute="centerX" secondItem="uEN-4M-Brb" secondAttribute="centerX" constant="-22" id="pnw-N5-mQM"/>
                         <constraint firstItem="rLp-2l-R6L" firstAttribute="bottom" secondItem="fNq-rv-9gl" secondAttribute="bottom" id="xyR-a3-gx5"/>
+                        <constraint firstItem="K2Z-Ap-Akz" firstAttribute="height" secondItem="rLp-2l-R6L" secondAttribute="height" id="ypf-Cb-L1V"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
+                            <exclude reference="6mC-sZ-9JA"/>
+                            <exclude reference="84B-ub-cau"/>
+                            <exclude reference="lNN-Km-zwc"/>
+                            <exclude reference="ypf-Cb-L1V"/>
                             <exclude reference="jBf-Wa-7LN"/>
                             <exclude reference="xyR-a3-gx5"/>
                         </mask>
@@ -186,47 +202,9 @@
                         <action selector="didPressCreateNewReminderButton:" destination="-1" eventType="touchUpInside" id="uRk-c8-iIu"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2UO-nB-EVQ" userLabel="View - Header">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SaE-6m-ans" userLabel="View - Separator">
-                            <rect key="frame" x="0.0" y="62" width="600" height="2"/>
-                            <color key="backgroundColor" red="0.22352941179999999" green="0.33725490200000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="2" id="Cpg-QJ-T0t"/>
-                            </constraints>
-                        </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminders" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKT-Ia-Xq1" userLabel="Label - Title">
-                            <rect key="frame" x="38" y="28" width="524" height="32"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="32" id="Zh4-vV-xIR"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="19"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="eKT-Ia-Xq1" secondAttribute="trailing" constant="38" id="DNf-UR-dTJ"/>
-                        <constraint firstItem="SaE-6m-ans" firstAttribute="leading" secondItem="2UO-nB-EVQ" secondAttribute="leading" id="NiH-Ff-nnh"/>
-                        <constraint firstAttribute="height" constant="64" id="Qnu-Zg-abh"/>
-                        <constraint firstAttribute="trailing" secondItem="SaE-6m-ans" secondAttribute="trailing" id="Wej-BA-zZy"/>
-                        <constraint firstItem="eKT-Ia-Xq1" firstAttribute="leading" secondItem="2UO-nB-EVQ" secondAttribute="leading" constant="38" id="aEE-fk-w3a"/>
-                        <constraint firstItem="SaE-6m-ans" firstAttribute="top" secondItem="eKT-Ia-Xq1" secondAttribute="bottom" constant="2" id="f4J-Zf-p6D"/>
-                        <constraint firstAttribute="bottom" secondItem="SaE-6m-ans" secondAttribute="bottom" id="gHZ-gd-skZ"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="600" id="wga-8G-OJ8"/>
-                    </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="wga-8G-OJ8"/>
-                        </mask>
-                    </variation>
-                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="2UO-nB-EVQ" secondAttribute="trailing" id="0FE-Xb-qLo"/>
                 <constraint firstItem="IjJ-lc-C2D" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="-130" id="6SS-cA-nTa" userLabel="Back Button Leading"/>
                 <constraint firstItem="rn1-kR-7VZ" firstAttribute="top" secondItem="5Zh-0Y-BIo" secondAttribute="bottom" constant="181" id="73c-q1-DPs"/>
                 <constraint firstAttribute="trailing" secondItem="uEN-4M-Brb" secondAttribute="trailing" constant="-130" id="8Uc-vA-oTY" userLabel="Next Button Trailing"/>
@@ -235,10 +213,8 @@
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerY" secondItem="rn1-kR-7VZ" secondAttribute="centerY" id="JEj-WW-XR9"/>
                 <constraint firstItem="5Zh-0Y-BIo" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="LBe-Z9-BDv"/>
                 <constraint firstAttribute="bottom" secondItem="Sog-WI-tIC" secondAttribute="bottom" id="Nis-wT-Jst"/>
-                <constraint firstItem="2UO-nB-EVQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="R2b-ZH-lOw"/>
                 <constraint firstItem="Sog-WI-tIC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UJc-0c-KpR"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="YEV-Fs-vfi" secondAttribute="bottom" id="XH5-Z5-Xfu"/>
-                <constraint firstItem="Sog-WI-tIC" firstAttribute="top" secondItem="2UO-nB-EVQ" secondAttribute="bottom" id="aHf-FZ-2Yg"/>
                 <constraint firstItem="rn1-kR-7VZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aiq-gx-D1G"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="rn1-kR-7VZ" secondAttribute="top" constant="10" id="ao2-jY-InM"/>
                 <constraint firstItem="YEV-Fs-vfi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gEU-E9-Sau"/>
@@ -247,6 +223,7 @@
                 <constraint firstItem="rn1-kR-7VZ" firstAttribute="top" secondItem="Sog-WI-tIC" secondAttribute="bottom" constant="181" id="jsW-eK-xlh"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="rn1-kR-7VZ" secondAttribute="bottom" id="lgC-az-Vs2"/>
                 <constraint firstAttribute="trailing" secondItem="Sog-WI-tIC" secondAttribute="trailing" id="lgY-4x-kMo"/>
+                <constraint firstItem="Sog-WI-tIC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="nJG-BE-yQD"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerX" secondItem="rn1-kR-7VZ" secondAttribute="centerX" id="oZt-o8-cHf"/>
                 <constraint firstAttribute="trailing" secondItem="YEV-Fs-vfi" secondAttribute="trailing" id="p7a-JH-p2v"/>
                 <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="-130" id="pI9-cO-jUd" userLabel="Next Button Bottom"/>
@@ -255,7 +232,6 @@
                 <constraint firstAttribute="bottom" secondItem="rn1-kR-7VZ" secondAttribute="bottom" constant="-55" id="uNk-PM-xpg" userLabel="Center Button Bottom"/>
                 <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="65" id="uR5-eq-qvn"/>
                 <constraint firstAttribute="bottom" secondItem="YEV-Fs-vfi" secondAttribute="bottom" id="vlK-tn-Ahc"/>
-                <constraint firstItem="2UO-nB-EVQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="wCw-70-Jch"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
