--- a/g5Mindr/g5Mindr/XIBs/g5TimeConditionViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5TimeConditionViewController.xib
@@ -17,14 +17,17 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="XCl-UM-3ud">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                </imageView>
                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NX3-RA-rST" customClass="g5TimePicker">
-                    <rect key="frame" x="40" y="64" width="520" height="180"/>
+                    <rect key="frame" x="40" y="128" width="520" height="180"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="180" id="oe2-Aw-D6F"/>
                     </constraints>
                 </pickerView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BsD-N0-MnJ" userLabel="View - Timer">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                    <rect key="frame" x="0.0" y="64" width="600" height="64"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lfv-aR-rLH" userLabel="Separator">
                             <rect key="frame" x="0.0" y="62" width="600" height="2"/>
@@ -73,7 +76,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ty2-UY-L1Y" userLabel="View - Repetition">
-                    <rect key="frame" x="0.0" y="244" width="600" height="64"/>
+                    <rect key="frame" x="0.0" y="308" width="600" height="64"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="455-0u-vSt" userLabel="Separator">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="2"/>
@@ -116,16 +119,23 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="XCl-UM-3ud" secondAttribute="trailing" id="73V-5u-DAd"/>
                 <constraint firstItem="NX3-RA-rST" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="GJa-t4-cVz"/>
                 <constraint firstItem="ty2-UY-L1Y" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JSe-IN-USA"/>
-                <constraint firstItem="BsD-N0-MnJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="P9z-zA-GhH"/>
+                <constraint firstItem="XCl-UM-3ud" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="O00-5r-h30"/>
+                <constraint firstItem="BsD-N0-MnJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="P9z-zA-GhH"/>
                 <constraint firstAttribute="trailing" secondItem="BsD-N0-MnJ" secondAttribute="trailing" id="SJh-VN-Qwj"/>
                 <constraint firstItem="BsD-N0-MnJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="V5j-ON-RdN"/>
+                <constraint firstAttribute="bottom" secondItem="XCl-UM-3ud" secondAttribute="bottom" id="cRW-Sh-cVV"/>
                 <constraint firstAttribute="trailing" secondItem="NX3-RA-rST" secondAttribute="trailing" constant="40" id="f5A-9E-3gG"/>
+                <constraint firstItem="XCl-UM-3ud" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jZV-5H-6tf"/>
                 <constraint firstItem="ty2-UY-L1Y" firstAttribute="top" secondItem="NX3-RA-rST" secondAttribute="bottom" id="ueb-n8-1Ys"/>
                 <constraint firstItem="NX3-RA-rST" firstAttribute="top" secondItem="BsD-N0-MnJ" secondAttribute="bottom" id="wz6-dU-FZk"/>
                 <constraint firstAttribute="trailing" secondItem="ty2-UY-L1Y" secondAttribute="trailing" id="yqe-Hz-qEJ"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="background" width="375" height="667"/>
+    </resources>
 </document>
