--- a/g5Mindr/g5Mindr/XIBs/g5WeatherTypeConditionViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5WeatherTypeConditionViewController.xib
@@ -16,8 +16,11 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yea-4w-ZKc">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="uwi-Cd-uLo">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yea-4w-ZKc">
+                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
@@ -28,11 +31,18 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="yea-4w-ZKc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="4AT-aV-Dht"/>
+                <constraint firstItem="yea-4w-ZKc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="4AT-aV-Dht"/>
+                <constraint firstAttribute="bottom" secondItem="uwi-Cd-uLo" secondAttribute="bottom" id="Gea-Qz-kmQ"/>
                 <constraint firstItem="yea-4w-ZKc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Kko-t1-10C"/>
                 <constraint firstAttribute="bottom" secondItem="yea-4w-ZKc" secondAttribute="bottom" id="Noc-zh-b7N"/>
                 <constraint firstAttribute="trailing" secondItem="yea-4w-ZKc" secondAttribute="trailing" id="RlE-yl-Y7e"/>
+                <constraint firstItem="uwi-Cd-uLo" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hwK-Oo-L9H"/>
+                <constraint firstAttribute="trailing" secondItem="uwi-Cd-uLo" secondAttribute="trailing" id="vFc-zu-mUf"/>
+                <constraint firstItem="uwi-Cd-uLo" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="yPm-Rz-i7l"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="background" width="375" height="667"/>
+    </resources>
 </document>
