--- a/g5Mindr/g5Mindr/XIBs/Cells/g5WeatherTypeConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/XIBs/Cells/g5WeatherTypeConditionTableViewCell.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lww-xR-ykA" userLabel="Background">
@@ -32,21 +32,39 @@
                             <constraint firstAttribute="height" constant="21" id="dhK-nu-yfU"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUh-jM-UdH">
+                        <rect key="frame" x="0.0" y="88" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.36078431372549019" green="0.47843137254901957" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="KjG-H8-7We"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="KUh-jM-UdH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="4x6-I5-KDf"/>
                     <constraint firstItem="lww-xR-ykA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7wy-QC-hn3"/>
                     <constraint firstAttribute="bottom" secondItem="lww-xR-ykA" secondAttribute="bottom" id="MXs-dv-cph"/>
+                    <constraint firstItem="KUh-jM-UdH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Mvc-ZT-AoX"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="KUh-jM-UdH" secondAttribute="trailing" id="Noa-Fw-exJ"/>
                     <constraint firstItem="JiA-9Y-aWv" firstAttribute="leading" secondItem="Y8g-WV-KJR" secondAttribute="trailing" constant="12" id="OgY-o8-ETO"/>
                     <constraint firstAttribute="trailing" secondItem="lww-xR-ykA" secondAttribute="trailing" id="PE1-0q-U2n"/>
                     <constraint firstItem="Y8g-WV-KJR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PO8-fN-1tC"/>
                     <constraint firstItem="JiA-9Y-aWv" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aIY-kP-IOW"/>
                     <constraint firstItem="Y8g-WV-KJR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="h5d-23-K75"/>
+                    <constraint firstAttribute="trailing" secondItem="KUh-jM-UdH" secondAttribute="trailing" id="iJc-QM-fRy"/>
+                    <constraint firstAttribute="bottom" secondItem="KUh-jM-UdH" secondAttribute="bottom" id="nuC-Sy-bfr"/>
                     <constraint firstAttribute="trailingMargin" secondItem="JiA-9Y-aWv" secondAttribute="trailing" constant="12" id="q9f-Bx-Gty"/>
                     <constraint firstItem="lww-xR-ykA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ult-HT-vgU"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Mvc-ZT-AoX"/>
+                        <exclude reference="Noa-Fw-exJ"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
