--- a/g5Mindr/g5Mindr/XIBs/g5WeatherTypeConditionViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5WeatherTypeConditionViewController.xib
@@ -23,6 +23,7 @@
                     <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="Vle-3X-obO"/>
                         <outlet property="delegate" destination="-1" id="OuO-hp-sxK"/>
