--- a/g5Mindr/g5Mindr/XIBs/Cells/g5ReminderTableViewCell.xib
+++ b/g5Mindr/g5Mindr/XIBs/Cells/g5ReminderTableViewCell.xib
@@ -8,15 +8,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="g5ReminderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="g5ReminderTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="53.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcq-Nq-pFF">
+                        <rect key="frame" x="0.0" y="78" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="mC6-x4-MGK"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7h1-73-PQF" userLabel="onSwitch" customClass="OnSwitchView">
-                        <rect key="frame" x="263" y="11" width="49" height="31"/>
+                        <rect key="frame" x="263" y="24" width="49" height="31"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="hLz-pA-v55"/>
@@ -24,20 +31,29 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Puf-S3-x1i">
-                        <rect key="frame" x="263" y="11" width="49" height="31"/>
+                        <rect key="frame" x="263" y="24" width="49" height="31"/>
                         <connections>
                             <action selector="didPressSwitchButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MmL-KH-sdF"/>
                         </connections>
                     </button>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSO-Ql-iwT">
-                        <rect key="frame" x="20" y="6" width="40" height="40"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSO-Ql-iwT" userLabel="Outer Ring">
+                        <rect key="frame" x="20" y="13" width="54" height="54"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="EF5-qP-9Ns"/>
-                            <constraint firstAttribute="width" constant="40" id="PzN-6g-iMW"/>
+                            <constraint firstAttribute="height" constant="54" id="EF5-qP-9Ns"/>
+                            <constraint firstAttribute="width" constant="54" id="PzN-6g-iMW"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-4d-JaB" userLabel="Inner Ring">
+                        <rect key="frame" x="25.5" y="18" width="44" height="44"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="JWJ-34-Uc9"/>
+                            <constraint firstAttribute="width" constant="44" id="Wra-Jo-z4i"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkn-qA-4Bq">
-                        <rect key="frame" x="68" y="27" width="187" height="20"/>
+                        <rect key="frame" x="82" y="40" width="173" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="bnv-pf-9Yq"/>
                         </constraints>
@@ -46,12 +62,23 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92D-4u-Asc" userLabel="Primary Label">
-                        <rect key="frame" x="68" y="7" width="187" height="20"/>
+                        <rect key="frame" x="82" y="20" width="173" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="wIF-kC-iYP"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAu-Pl-I9w" userLabel="Emoticon Label">
+                        <rect key="frame" x="27" y="20" width="40" height="40"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="D2r-y7-6k8"/>
+                            <constraint firstAttribute="width" constant="40" id="l1J-De-dj8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -66,19 +93,28 @@
                     <constraint firstAttribute="trailingMargin" secondItem="7h1-73-PQF" secondAttribute="trailing" id="OSV-Ax-Twf"/>
                     <constraint firstItem="kkn-qA-4Bq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="10" id="VU5-f3-p3q"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="centerY" secondItem="Puf-S3-x1i" secondAttribute="centerY" id="WLr-nZ-VBQ"/>
+                    <constraint firstItem="jAu-Pl-I9w" firstAttribute="centerY" secondItem="bSO-Ql-iwT" secondAttribute="centerY" id="aOR-UY-R8J"/>
+                    <constraint firstItem="U8B-4d-JaB" firstAttribute="centerY" secondItem="bSO-Ql-iwT" secondAttribute="centerY" id="cBC-Fs-dNg"/>
+                    <constraint firstItem="U8B-4d-JaB" firstAttribute="centerX" secondItem="bSO-Ql-iwT" secondAttribute="centerX" id="cUf-v9-7nu"/>
                     <constraint firstItem="92D-4u-Asc" firstAttribute="leading" secondItem="bSO-Ql-iwT" secondAttribute="trailing" constant="8" id="dDQ-yo-UCD"/>
+                    <constraint firstItem="Mcq-Nq-pFF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dyK-SO-dFd"/>
+                    <constraint firstAttribute="bottom" secondItem="Mcq-Nq-pFF" secondAttribute="bottom" id="eY2-5e-XQw"/>
                     <constraint firstItem="kkn-qA-4Bq" firstAttribute="leading" secondItem="bSO-Ql-iwT" secondAttribute="trailing" constant="8" id="jQG-pr-1Tp"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="width" secondItem="Puf-S3-x1i" secondAttribute="width" id="oHd-fz-ien"/>
+                    <constraint firstItem="jAu-Pl-I9w" firstAttribute="centerX" secondItem="bSO-Ql-iwT" secondAttribute="centerX" id="sOl-QH-usn"/>
+                    <constraint firstAttribute="trailing" secondItem="Mcq-Nq-pFF" secondAttribute="trailing" id="uAp-2q-QNp"/>
                     <constraint firstItem="7h1-73-PQF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="unw-0I-ylW"/>
                     <constraint firstItem="bSO-Ql-iwT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="ySR-cM-B8G"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="emoticonLabel" destination="jAu-Pl-I9w" id="tG9-Bd-c9a"/>
                 <outlet property="explanationLabel" destination="kkn-qA-4Bq" id="ePZ-Rj-J49"/>
-                <outlet property="iconImageView" destination="bSO-Ql-iwT" id="6Ms-M2-wPn"/>
+                <outlet property="innerRingImageView" destination="U8B-4d-JaB" id="kix-QW-cdo"/>
                 <outlet property="onSwitch" destination="7h1-73-PQF" id="a5F-ho-Gph"/>
                 <outlet property="onSwitchButton" destination="Puf-S3-x1i" id="9UI-3c-Fwr"/>
+                <outlet property="outerRingImageView" destination="bSO-Ql-iwT" id="9w7-yL-c86"/>
                 <outlet property="titleLabel" destination="92D-4u-Asc" id="mgx-2z-cV6"/>
             </connections>
         </tableViewCell>
