--- a/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
@@ -120,7 +120,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0" green="0.74901960779999999" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="5I2-ZU-FR5" secondAttribute="bottom" constant="8" id="9Dr-lc-Qbv"/>
                         <constraint firstAttribute="bottom" secondItem="7uq-r1-4nk" secondAttribute="bottom" id="AIY-My-fsg"/>
@@ -155,7 +155,7 @@
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="0.99735954400000004" blue="0.057499010289999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="gSL-8G-KAa" secondAttribute="bottom" id="2xX-q6-9EK"/>
                 <constraint firstItem="wbd-an-rOM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6VS-JR-VZv"/>
